...
                textAlign = TextAlign.Center,
                modifier = Modifier.fillMaxWidth()
            )

            OutlinedTextField(
                value = handleCommentViewModel.commentText,
                label = { Text(text = "Comentário") },
                placeholder = { Text(text = "Digite seu comentário") },
                onValueChange = { handleCommentViewModel.commentText = it },
                modifier = Modifier
                    .height(200.dp)
                    .fillMaxWidth()
            )
...
                    onClick = {
                        onSuccess()
                    },
                    shape = RoundedCornerShape(5.dp),
                    enabled = handleCommentViewModel.commentText.isNotEmpty(),
                    modifier = Modifier.weight(1f).semantics {
                        contentDescription = "ConfirmAddCommentButton"
                    },
                ) {
                    Icon(imageVector = if (isUpdate) Icons.Filled.Create else Icons.Filled.Add, contentDescription = null)
                    Spacer(modifier = Modifier.width(2.dp))
                    Text(text = if (isUpdate) "Atualizar" else "Adicionar")
                }
...
