...
                readOnly = true,
                interactionSource = askInteraction,
                onValueChange = {}
            )

            TextButton(onClick = { /*TODO*/ }) {
                Text(text = "ou quer responder umas perguntas?")
            }
        }
    }
}

@Preview(showBackground = true)
...
fun AskPreview() {
    UserInfo = User(
        name = "Pedro",
        email = "pedro@gmail.com",
        username = "pedro123",
        xp = 0,
        currentBadge = Badge("Teste"),
        expertises = listOf(),
        token = ""
    )

    MindHubTheme {
        Ask(
...
