...

                    IconButton(
                        onClick = {
                            onRemove(comment.id, isReply)
                        },
                        modifier = Modifier.semantics {
                            contentDescription = "DeleteCommentButton"
                        }
                    ) {
                        Icon(
                            imageVector = Icons.Filled.Delete,
                            contentDescription = null,
                            modifier = Modifier.size(16.dp)
...
