...
    AppScaffold(
        currentView = currentView,
        navigator = navigator
    ) {
        Box(modifier = Modifier.fillMaxSize()) {
            Tabs(
                tabs = listOf("Para você", "Mais recentes"),
                tabsContent = listOf({
                    PostList(
                        posts = viewModel.forYou,
                        modifier = Modifier.padding(horizontal = 16.dp),
                        isLoading = viewModel.isLoadingForYou,
                        onClick = onClickItem
...
            FloatingActionButton(
                onClick = onClickAdd,
                modifier = Modifier
                    .align(Alignment.BottomEnd)
                    .padding(16.dp)
                    .semantics {
                        contentDescription = "AddPostButton"
                    }
            ) {
                Icon(imageVector = Icons.Outlined.Add, contentDescription = null)
            }
        }
    }
...
