...
                .fillMaxWidth()
        ) {
            for (view in Views.entries) {
                IconButton(
                    onClick = { navigator.navigate(view.destination) },
                    modifier = Modifier.semantics {
                        contentDescription = "NavBarButton"
                    }
                ) {
                    Icon(
                        imageVector = ImageVector.vectorResource(view.icon),
                        contentDescription = null,
                        tint = if (view == currentView) {
...
